# candidate-transformer

./: .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
api/: index.py  requirements.txt
configs/: custom_example.json  recruiter_card.json
samples/inputs/: ats.json  garbage.json  notes.txt  recruiters.csv  resume_raj_patel.docx
samples/outputs/: custom_output.json  default_output.json  recruiter_card_output.json
src/candidate_transformer/: __init__.py  canonical.py  cli.py  config.py  merge.py  normalize.py  pipeline.py  projection.py  scoring.py  skills.py  validation.py  web.py
src/candidate_transformer/sources/: __init__.py  ats_json.py  base.py  recruiter_csv.py  recruiter_notes.py  resume.py
tests/: conftest.py  test_merge.py  test_normalize.py  test_pipeline.py  test_projection.py  test_scoring.py
tests/gold/: jane_default.json
