[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Merge messy multi-source candidate data into one canonical, explainable profile."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "phonenumbers>=8.13",
    "pycountry>=22.3",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
dev = ["pytest>=7.4", "reportlab>=4.0"]

[project.scripts]
candidate-transformer = "candidate_transformer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
